Replace woman technologist emoji by an image
That emoji is awful on Linux.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="column">
           <h1>
-            <span class="technologist-emoji">👩‍💻</span>
+            <span class="technologist-emoji"></span>
             Welcome to our
             <strong>Solid Ruby Design Newsletter</strong>
             👋
