--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <span class="code-keyword">class</span> <span class="code-class">SolidRubyDesign</span>
   <span class="code-keyword">def</span> <span class="code-method">initialize</span>
     <span class="code-instance-variable">@</span>format  <span class="code-assignment">=</span> <span class="code-delimiter">:</span><span class="code-string">newsletter</span>
-    <span class="code-instance-variable">@</span>tagline <span class="code-assignment">=</span> <span class="code-string"><span class="code-delimiter">'</span>Become a solid ruby & rails developer<span class="code-delimiter">'</span></span>
-    <span class="code-instance-variable">@</span>topics  <span class="code-assignment">=</span> <span class="code-delimiter">[</span><span class="code-string"><span class="code-delimiter">'</span>good design<span class="code-delimiter">'</span></span>, <span class="code-string"><span class="code-delimiter">'</span>learning shortcuts<span class="code-delimiter">'</span></span><span class="code-delimiter">]</span>
+    <span class="code-instance-variable">@</span>tagline <span class="code-assignment">=</span> <span class="code-string"><span class="code-delimiter">'</span>Learn practical patterns to tame complexities in your Ruby code<span class="code-delimiter">'</span></span>
+    <span class="code-instance-variable">@</span>topics  <span class="code-assignment">=</span> <span class="code-delimiter">[</span><span class="code-string"><span class="code-delimiter">'</span>simple design<span class="code-delimiter">'</span></span>, <span class="code-string"><span class="code-delimiter">'</span>practical learning<span class="code-delimiter">'</span></span><span class="code-delimiter">]</span>
     <span class="code-instance-variable">@</span>authors <span class="code-assignment">=</span> <span class="code-delimiter">[</span><span class="code-string"><span class="code-delimiter">'</span>Cécile<span class="code-delimiter">'</span></span>, <span class="code-string"><span class="code-delimiter">'</span>Nicolas<span class="code-delimiter">'</span></span><span class="code-delimiter">]</span>
   <span class="code-keyword">end</span>
 
