Add meta tags for social media cards

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Solid Ruby Design Newsletter</title>
+    <meta name="description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code.">
+
+    <!-- Facebook Open Graph data -->
+    <meta property="og:title" content="Solid Ruby Design Newsletter" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.solidrubydesign.com/" />
+    <meta property="og:image" content="http://www.solidrubydesign.com/images/meta-banner.jpg" />
+    <meta property="og:description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code." />
+    <meta property="og:site_name" content="Solid Ruby Design Newsletter" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@cecilitse">
+    <meta name="twitter:title" content="Solid Ruby Design Newsletter">
+    <meta name="twitter:description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code.">
+    <meta name="twitter:creator" content="@n_filzi">
+    <meta name="twitter:image:src" content="http://www.solidrubydesign.com/images/meta-banner.jpg">
   </head>
   <body>
     <div class="container">
