--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Solid Ruby Design Newsletter</title>
     <meta name="description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code.">
 
-    <!-- Facebook Open Graph data -->
+    <!-- Open Graph data -->
     <meta property="og:title" content="Solid Ruby Design Newsletter" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.solidrubydesign.com/" />
-    <meta property="og:image" content="http://www.solidrubydesign.com/images/meta-banner.jpg" />
+    <meta property="og:url" content="https://www.solidrubydesign.com/" />
+    <meta property="og:image" content="https://www.solidrubydesign.com/images/meta-banner.jpg" />
     <meta property="og:description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code." />
     <meta property="og:site_name" content="Solid Ruby Design Newsletter" />
 
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Solid Ruby Design Newsletter">
     <meta name="twitter:description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code.">
     <meta name="twitter:creator" content="@n_filzi">
-    <meta name="twitter:image:src" content="http://www.solidrubydesign.com/images/meta-banner.jpg">
+    <meta name="twitter:image:src" content="https://www.solidrubydesign.com/images/meta-banner.jpg">
   </head>
   <body>
     <div class="container">
