--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="style.css">
 
-    <script type="text/javascript" src="https://js.stripe.com/v3" async></script>
-
     <title>Solid Ruby Design Newsletter</title>
     <meta name="description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code.">
 
@@ -79,6 +77,7 @@
       </div>
     </div>
 
+    <script type="text/javascript" src="https://js.stripe.com/v3"></script>
     <script>
       var settings = {
         test: {
