Fix file extension of meta banner image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Solid Ruby Design Newsletter" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.solidrubydesign.com/" />
-    <meta property="og:image" content="https://www.solidrubydesign.com/images/meta-banner.jpg" />
+    <meta property="og:image" content="https://www.solidrubydesign.com/images/meta-banner.png" />
     <meta property="og:description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code." />
     <meta property="og:site_name" content="Solid Ruby Design Newsletter" />
 
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="Solid Ruby Design Newsletter">
     <meta name="twitter:description" content="A newsletter to learn practical patterns to tame complexities in your Ruby code.">
     <meta name="twitter:creator" content="@n_filzi">
-    <meta name="twitter:image:src" content="https://www.solidrubydesign.com/images/meta-banner.jpg">
+    <meta name="twitter:image:src" content="https://www.solidrubydesign.com/images/meta-banner.png">
   </head>
   <body>
     <div class="container">
