Add more to come to the curriculum

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       3. SQL & ActiveRecord optimizations
       4. Query Objects
       5. Helpers & Presenters
-      6. Value Objects</span>
+      6. Value Objects
+      7. More to come</span>
     <span class="code-heredoc">CURRICULUM</span>
   <span class="code-keyword">end</span>
 <span class="code-keyword">end</span>
