Update top border and enlarge technologist emoji

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </h1>
           <div class="banner">
             <pre>
+              <!-- Please resist, do not indent my content! -->
               <code>
-<!-- Please resist, do not indent me! -->
 <span class="code-keyword">class</span> <span class="code-class">SolidRubyDesign</span>
   <span class="code-keyword">def</span> <span class="code-method">initialize</span>
     <span class="code-instance-variable">@</span>format  <span class="code-assignment">=</span> <span class="code-delimiter">:</span><span class="code-string">newsletter</span>
