--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           </div>
           <div class="payment-container">
             <p id="payment-error-message"><!-- Filled by Stripe Checkout script --></p>
-            <p class="payment-notice">One-shot payment of 50€</p>
+            <p class="payment-notice" data-price-message>One-shot payment of <span data-price>50</span>€</p>
+            <p class="friend-message" data-friend-message></p>
           </div>
         </div>
       </div>
@@ -83,27 +84,61 @@
       var settings = {
         test: {
           stripeKey:   'pk_test_AQChgkHVYwyEZ7tQ6USRMMn700qcDhF3kr',
-          productSKU:  'sku_EzjGIEQvq3lPMM',
+          products: {
+            classic: { sku: 'sku_EzjGIEQvq3lPMM', price: 99 },
+            lewagon: {
+              sku:          'sku_FHZh5DJtsfNxhK',
+              price:        50,
+              priceMessage: 'One-shot payment of <strike>99€</strike> <strong>50€</strong>',
+              message:      'Enjoy our Le Wagon family discount ❤️'
+            }
+          },
           redirectURL: window.location.origin
         },
         live: {
           stripeKey:   'pk_live_LX30bNQfyM7kr7Mndz2AKIYv00RvtzsXWT',
-          productSKU:  'sku_EzjFh7OMJC0s4H',
+          products: {
+            classic: { sku: 'sku_EzjFh7OMJC0s4H', price: 99 },
+            lewagon: {
+              sku:          'sku_FHZSVwZfvntbam',
+              price:        50,
+              priceMessage: 'One-shot payment of <strike>99€</strike> <strong>50€</strong>',
+              message:      'Enjoy our Le Wagon family discount ❤️'
+            }
+          },
           redirectURL: 'https://www.solidrubydesign.com'
         }
       }
 
-      var mode           = window.location.hostname == 'www.solidrubydesign.com' ? 'live' : 'test';
+      const mode          = window.location.hostname == 'www.solidrubydesign.com' ? 'live' : 'test';
+      const mode_settings = settings[mode]
+
       var checkoutButton = document.getElementById('checkout-button');
-      var stripe         = Stripe(settings[mode].stripeKey);
+      var stripe         = Stripe(mode_settings.stripeKey);
+
+      const urlParams    = new URLSearchParams(window.location.search);
+
+      const couponSource = urlParams.get('coupon') || 'classic';
+      const product      = mode_settings.products[couponSource]
+
+      const priceSpan = document.querySelector('span[data-price]')
+      priceSpan.textContent = product.price
+
+      const friendMessage = document.querySelector('p[data-friend-message]')
+      const priceMessage = document.querySelector('p[data-price-message]')
+
+      if (couponSource != 'classic') {
+        priceMessage.innerHTML = product.priceMessage
+        friendMessage.textContent = product.message
+      }
 
       checkoutButton.addEventListener('click', function () {
         stripe.redirectToCheckout({
           locale: 'en',
-          items: [{ sku: settings[mode].productSKU, quantity: 1 }],
+          items: [{ sku: product.sku, quantity: 1 }],
 
-          successUrl: `${settings[mode].redirectURL}/payment/success.html`,
-          cancelUrl:  `${settings[mode].redirectURL}/payment/canceled.html`,
+          successUrl: `${mode_settings.redirectURL}/payment/success.html`,
+          cancelUrl:  `${mode_settings.redirectURL}/payment/canceled.html`,
         })
         .then(function (result) {
           if (result.error) {
